--- a/vignettes/M3Cvignette.Rmd
+++ b/vignettes/M3Cvignette.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "M3C: Monte Carlo Reference-based Consensus Clustering"
 author: "Christopher R John"
-date: "30/01/2019"
+date: "26/06/2019"
 output: 
-  BiocStyle::html_document
+  BiocStyle::pdf_document
 vignette: >
   %\VignetteIndexEntry{M3C}
   %\VignetteEngine{knitr::rmarkdown}
@@ -46,10 +46,9 @@ The M3C package contains the glioblastoma (GBM) cancer microarray dataset for te
 
 ```{r, message=FALSE}
 library(M3C)
-library(NMF) # loading for aheatmap function
-library(gplots) # has a nice colour scale
-library(ggsci) # more cool colours
-
+library(NMF) 
+library(gplots)
+library(ggsci)
 # now we have loaded the mydata and desx objects (with the package automatically)
 # mydata is the expression data for GBM
 # desx is the annotation for this data
@@ -67,7 +66,9 @@ You can read more about the assumptions of clustering algorithms here:
 
 Spectral clustering may be used to cluster more unusual structures using M3C, but this normally is not necessary. Ward's hierarchical clustering (HC) is faster than these 3 algorithms and is an option included in M3C, although in practice PAM and KM usually perform better.
 
-It is also extremely important to check batch effects and other unwanted sources of variation do not drive the main variation in the data. The PCA function has a labels flag for adding categorical and continuous variables to the below plot (type ?pca), but for a more quantitative analysis of these variables before clustering we recommend David Watson's plot_drivers function from the bioplotr package (https://github.com/dswatson/bioplotr).
+It is also important to check batch effects and other unwanted sources of variation do not drive the main variation in the data. The PCA function has a labels flag for adding categorical and continuous variables to the below plot (type ?pca), but for a more quantitative analysis of these variables before clustering there is David Watson's plot_drivers excellent function from the bioplotr package (https://github.com/dswatson/bioplotr).
+
+The data should have been transformed to be homoskedastic (or nearly so) by this point (e.g. vst or log2), otherwise the larger features will have larger variances and dominate the PCA and cluster analysis. If the data contains different kinds of features, e.g. both protein and miRNA, then they should also be z-score normalised to be comparable.
 
 ```{r, message=FALSE, results='hide'}
 PCA1 <- pca(mydata)
@@ -77,14 +78,15 @@ PCA1 <- pca(mydata)
 
 ## Running M3C
 
-In our example, we run the algorithm using the default settings (100x Monte Carlo iterations and 100x inner replications). We have found the results generally stable using these parameters. If you are running a slow machine, have a massive dataset, or want results quickly, it is reasonable to lower the Monte Carlo iterations parameter to 50-5x. The inner replications needs to be at least 100x, changing this up to 250x will lead to increased result stability on some datasets. If your features are on different scales it is helpful to scale the data before cluster analysis.
+In our example, we run the algorithm using the default settings (100x Monte Carlo iterations and 100x inner replications). We have found the results generally stable using these parameters. If you are running a slow machine, have a massive dataset, or want results quickly, it is reasonable to lower the Monte Carlo iterations parameter to 50-5x. The inner replications needs to be at least 100x, changing this up to 250x will lead to increased result stability on some datasets.
 
 Plots from the tool and an .csv file with the numerical outputs may be printed into the working directory (by adding printres = TRUE). We will set the seed in this example, incase you wish to repeat our results exactly (seed = 123). We will add an annotation file for streamlined downstream analyses (des = desx), and because we are comparing the classes with a categorical variable (tumour type) we shall set 'doanalysis' to TRUE and 'analysistype' to 'chi', to do a chi-squared test for significance. The 'variable' parameter is set to class (tumour histology in this data).
 
 It is recommended to save the workspace after M3C if you are working with a large dataset because the runtimes can be quite long. M3C uses by default PAM with Euclidean distance in the consensus clustering loop because we have found this runs fast with good results. We will set the 'removeplots' parameter to TRUE in this example to remove plots from the vignette, normally this is FALSE by default.
 
 ```{r, message=FALSE, results='hide'}
-res <- M3C(mydata, cores=1, seed = 123, des = desx, removeplots = TRUE, analysistype = 'chi', doanalysis = TRUE, variable = 'class')
+res <- M3C(mydata, cores=1, seed = 123, des = desx, removeplots = TRUE, 
+           analysistype = 'chi', doanalysis = TRUE, variable = 'class')
 ```
 
 The scores and p values are contained within the res$scores object. We can see below the RCSI reaches a maxima at K = 4 (RSCI=0.33), the Monte Carlo p value supports this optimal K decision (p=0.033). This means the null hypothesis that K = 1 can be rejected for this dataset because we have achieved significance (alpha=0.05) versus a dataset with no clusters. For p values that extend beyond the lower limits imposed by the Monte Carlo simulation, M3C estimates parameters from the simulation to generate a beta distribution. The BETA_P in this case study is 0.033.
@@ -143,17 +145,16 @@ Next, we scale the data here row wise according to z-score, prior to some light 
 Note, we are going to use the NMF aheatmap function to draw the heatmap because it is simple, but for more complex heatmap designs for publication, ComplexHeatmap is definately preferable (https://bioconductor.org/packages/release/bioc/html/ComplexHeatmap.html).
 
 ```{r,fig.show = 'hide'}
-# normalise and scale the data
-data <- t(scale(t(data))) # z-score normalise each row (feature)
-data <- apply(data, 2, function(x) ifelse(x > 4, 4, x)) # compress data within range
-data <- apply(data, 2, function(x) ifelse(x < -4, -4, x)) # compress data within range
+data <- t(scale(t(data))) # z-score normalise each row
+data <- apply(data, 2, function(x) ifelse(x > 4, 4, x)) # compress data 
+data <- apply(data, 2, function(x) ifelse(x < -4, -4, x)) # compress data
 
-# get some cool colour palettes from the ggsci package and RColourBrewer
-ann_colors <- ggsci::pal_startrek("uniform")(4) # star trek palette
-ann_colors2 <- ggsci::pal_futurama()(4) # futurama palette
+ann_colors <- ggsci::pal_startrek("uniform")(4)
+ann_colors2 <- ggsci::pal_futurama()(4) #
 pal <- rev(colorRampPalette(RColorBrewer::brewer.pal(10, "RdBu"))(256))
 NMF::aheatmap(data, annCol = annon, Colv = NA, distfun = 'pearson', 
-         color = gplots::bluered(256), annColors = list(class=ann_colors, consensuscluster=ann_colors2))
+         color = gplots::bluered(256), 
+         annColors = list(class=ann_colors, consensuscluster=ann_colors2))
 
 ```
 
@@ -225,15 +226,13 @@ Note, clustersim's method has recently been replaced with the CRAN package, clus
 
 ## Filtering features by variance
 
-A simple feature filter function has been included in M3C that uses one of variance, median absolute deviation (MAD), Pearson's coefficient of variation (A), or its second order derivative (A2) to filter the data. 
+A simple feature filter function has been included in M3C that uses one of variance, median absolute deviation (MAD), Pearson's coefficient of variation (A), or its second order derivative (A2) to filter the data. It is best to examine the distribution of variance with respect to the mean when selecting a filtering metric and cut-off setting. 
 
-It is best to examine the distribution of variance with respect to the mean when selecting a filtering metric and cut-off setting. We suggest to do some manual examination and plotting using the results of this function, for example, with the qplot function from ggplot2 of the mean-variance trend. If the variance increases with the mean, A or A2 may be more appropiate than variance or MAD. 
+MAD will yield similar results to variance, however, because it uses the median instead of the mean it will be more robust to outliers. This will be the preferable metric in many cases, although if the variance increases with the mean then A2 should be considered.
 
-MAD will yield similar results to variance, however, because it uses the median it will be more robust to outliers. This will be the preferable metric in many cases, although if the variance increases with the mean then A2 should be considered.
+The statistics for each feature (and the filtered data itself) are saved in a convienient data frame in the results list for plotting and further analysis. In the first case we recommend to set percentile to 100 which collects statistics for all features. We then suggest to do some manual examination and plotting using the results of this function, for example, with the qplot function from ggplot2 of the mean-variance trend. If the variance increases with the mean, A or A2 may be more appropiate than variance or MAD. 
 
-The statistics for each feature (and the filtered data itself) are saved in a convienient data frame in the results list for plotting and further analysis. 
-
-Below, we set the percentile to filter by and input the data. The code below extracts the 10% most variable features using variance as the filtering metric. The statistics for the topN features will be printed to the console. Type ?featurefilter for more information.
+Below, we set the percentile to filter by and input the data. The code below extracts the 10% most variable features using MAD as the filtering metric. In this case the example data has been already been filtered for variance then scaled additionally, so the results are not intended to be interpreteted as it is just an example. The statistics for the topN features will be printed to the console. Type ?featurefilter for more information.
 
 ```{r}
   filtered_results <- featurefilter(mydata, percentile=10, method='MAD', topN=5)
